[package]
name = "bme280-rs"
version = "0.2.0-dev"
authors = ["Claudio Mattera <dev@claudiomattera.it>"]
edition = "2021"
description = "A crate to query BME280 sensors over I²C"
readme = "README.md"
homepage = "https://gitlab.com/claudiomattera/bme280-rs"
repository = "https://gitlab.com/claudiomattera/bme280-rs"
license = "MIT OR Apache-2.0"
keywords = [
    "sensor",
    "i2c",
    "embedded-hal",
]
categories = [
    "embedded",
    "no-std",
]
publish = true
exclude = [
    ".gitattributes",
    ".drone.yml",
    ".pre-commit-config.yaml",
    "Makefile.toml",
]

[dependencies]
log = { version = "0.4" }
embedded-hal = { version = "1" }

[dev-dependencies]
assert2 = { version = "0.3" }
embedded-hal-mock = { version = "0.10", default-features = false, features = ["eh1"] }

[lints.rust]
missing_docs = "deny"

[lints.clippy]
# Categories
cargo = "deny"
pedantic = "deny"

# Individuals
alloc_instead_of_core = "deny"
allow_attributes_without_reason = "deny"
clone_on_ref_ptr = "deny"
else_if_without_else = "deny"
expect_used = "deny"
format_push_string = "deny"
if_then_some_else_none = "deny"
let_underscore_must_use = "deny"
lossy_float_literal = "deny"
missing_docs_in_private_items = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
panic = "deny"
panic_in_result_fn = "deny"
pattern_type_mismatch = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
self_named_module_files = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
str_to_string = "deny"
string_slice = "deny"
string_to_string = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unreachable = "deny"
unseparated_literal_suffix = "deny"
unwrap_used = "deny"
verbose_file_reads = "deny"
